# panspecies-dti

./: .gitignore  CITATION.cff  LICENSE  README.md  agg_config.yml  benchmark_toxicity.py  contrastive_loss.py  datamodules.py  default_config.yaml  embed.py  encoders.py  featurizers.py  model.py  pyproject.toml  run_panspecies.sh  saprot_utils.py  targets.txt  tests.py  train.py  trainloop.py  utils.py
.github/workflows/: unit-test.yml
benchmark_data/: moltoxpred_data_processed.tsv  moltoxpred_id.tsv
benchmark_mpp/: benchmark_mpp_classification.py  benchmark_mpp_regression.py
benchmark_mpp/delaney/: delaney_labels.csv
benchmark_mpp/freesolv/: freesolv_labels.csv
benchmark_mpp/lipo/: lipo_labels.csv
benchmark_mpp/sider/: sider_labels.csv
benchmark_mpp/tox21/: tox21_labels.csv  tox21_smiles.csv
checkpoints/: README.md  checkpoint.md
configs/: README.md  TDC_config.yaml  agg_config.yml  conplex_config.yaml  default_config.yaml  saprot_agg_config.yaml  saprot_contrast_config.yaml  unittest_config.yaml
data/: download_pcba.sh
data/DAVIS/: train.csv  train_foldseek.csv  val.csv
data/unittest_dummy_data/: Morgan_features.h5  test.csv  test_foldseek.csv  train.csv  train_foldseek.csv  val.csv  val_foldseek.csv
examples/: natural_products.tsv  pan_proteome_umap.npy
lit_pcba/: lit_pcba_sequence_dict.json  saprot_sequence_dict.json
lit_pcba/ADRB2/: 3p0g_protein.mol2  3pds_ligand.mol2  3pds_protein.mol2  3sn6_ligand.mol2  3sn6_protein.mol2  4lde_ligand.mol2  4lde_protein.mol2  4ldl_ligand.mol2  4ldl_protein.mol2  4ldo_ligand.mol2  4ldo_protein.mol2  (+4 more)
ultrafast/: callbacks.py  compute_topk.py  contrastive_loss.py  datamodules.py  drug_only_model.py  embed.py  encoders.py  featurizers.py  gpu_topk.py  loss.py  model.py  modules.py  protbert_feat.py  report.py  store.py  tdc_utils.py  train.py  utils.py
utils/: calculate_foldseek.py  combine_chunks.py  compute_streaming_stats.py  merge_streaming_stats.py  pdb_to_foldseek.py  sprint_aido.py  structure_to_saprot.py
(+266 files in other folders)
