[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultrafast"
version = "0.1.0"
description = "Ultra-high-throughput Virtual Screening"
authors = [{ name = "Caleb Ellington", email = "cellingt@andrew.cmu.edu" },
           { name = "Andrew McNutt"},
           { name = "Abhinav Adduri"},
           { name = "Monica Dayao"}]
dependencies = [
    "lightning==2.4.0",
    "torch==2.4.1",
    "pandas==2.1.4",
    "wandb==0.17.8",
    "omegaconf==2.3.0",
    "scikit_learn==1.2.2",
    "PyTDC==1.1.1",
    "rdkit==2023.9.5",
    "datamol==0.12.5",
    "fair-esm==2.0.0",
    "molfeat==0.10.1",
    "transformers==4.43.4",
    "chromadb==0.5.5",
    "gdown==5.2.0",
    "ml-pyxis @ git+https://github.com/vicolab/ml-pyxis.git@master",
]

[project.scripts]
ultrafast-train = "ultrafast.train:train_cli"
ultrafast-embed = "ultrafast.embed:embed_cli"
ultrafast-store = "ultrafast.store:store_cli"
ultrafast-report = "ultrafast.report:report_cli"
ultrafast-topk = "ultrafast.compute_topk:compute_topk_cli"

[tool.setuptools ]
packages= ["ultrafast"] 
include-package-data = true
